@@ -35,10 +35,7 @@ import com.dpw.runner.shipment.services.ReportingService.CommonUtils.ReportConst
 import com.dpw.runner.shipment.services.ReportingService.CommonUtils.ReportHelper;
 import com.dpw.runner.shipment.services.ReportingService.Models.AWbLabelModel;
 import com.dpw.runner.shipment.services.ReportingService.Models.IDocumentModel;
-import com.dpw.runner.shipment.services.ReportingService.Models.ShipmentModel.ConsolidationModel;
-import com.dpw.runner.shipment.services.ReportingService.Models.ShipmentModel.PackingModel;
-import com.dpw.runner.shipment.services.ReportingService.Models.ShipmentModel.RoutingsModel;
-import com.dpw.runner.shipment.services.ReportingService.Models.ShipmentModel.ShipmentModel;
+import com.dpw.runner.shipment.services.ReportingService.Models.ShipmentModel.*;
 import com.dpw.runner.shipment.services.commons.constants.Constants;
 import com.dpw.runner.shipment.services.commons.constants.EntityTransferConstants;
 import com.dpw.runner.shipment.services.dao.interfaces.IConsolidationDetailsDao;
@@ -72,11 +69,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
 
-import java.math.BigDecimal;
-import java.util.*;
-import java.util.stream.Collectors;
-
-import static com.dpw.runner.shipment.services.ReportingService.CommonUtils.ReportConstants.*;
 import static com.dpw.runner.shipment.services.utils.CommonUtils.setIsNullOrEmpty;
 
 @Component
@@ -105,6 +97,10 @@ public class AWBLabelReport extends IReport{
         isCombi = combi;
     }
 
+    public void setCustomLabel(boolean customLabel) {
+        isCustomLabel = customLabel;
+    }
+
     public void setRemarks(String remarks) {
         this.remarks = remarks;
     }
@@ -118,6 +114,7 @@ public class AWBLabelReport extends IReport{
     }
 
     private boolean isCombi;
+    private boolean isCustomLabel;
     private boolean isMawb;
     private String remarks;
     @Override
@@ -130,29 +127,22 @@ public class AWBLabelReport extends IReport{
     public IDocumentModel getDocumentModel(Long id) throws RunnerException {
         AWbLabelModel awbLabelModel = new AWbLabelModel();
         if(isCombi) {
-            ConsolidationDetails consolidationDetails;
-            Long consoleId;
+            ConsolidationDetails consolidationDetails = null;
+            Long consoleId = null;
             if(isMawb) {
                 consoleId = id;
                 consolidationDetails = getConsolidationsById(consoleId);
             }
             else {
                 ShipmentDetails shipmentDetails = getShipmentDetails(id);
-                if(setIsNullOrEmpty(shipmentDetails.getConsolidationList()))
-                    throw new RunnerException("Please attach the consolidation before printing Combi Labels");
-                consoleId = shipmentDetails.getConsolidationList().iterator().next().getId();
-                consolidationDetails = getConsolidationsById(consoleId);
-            }
-            awbLabelModel.setConsolidation(getConsolidationModel(consolidationDetails));
-            awbLabelModel.setAwb(getMawb(consoleId, true));
-            awbLabelModel.getConsolidation().setConsoleGrossWeightAndUnit(getConsolGrossWeightAndUnit(awbLabelModel.getConsolidation()));
-            awbLabelModel.setShipmentModels(new ArrayList<>());
-            if(!setIsNullOrEmpty(consolidationDetails.getShipmentsList())) {
-                for (ShipmentDetails shipmentDetails: consolidationDetails.getShipmentsList()) {
-                    awbLabelModel.getShipmentModels().add(getShipment(shipmentDetails));
+                if(!isCustomLabel) {
+                    if (setIsNullOrEmpty(shipmentDetails.getConsolidationList()))
+                        throw new RunnerException("Please attach the consolidation before printing Combi Labels");
+                    consoleId = shipmentDetails.getConsolidationList().iterator().next().getId();
+                    consolidationDetails = getConsolidationsById(consoleId);
                 }
             }
-            isMawb = true;
+            processNonCustomLabel(awbLabelModel, consolidationDetails, consoleId);
         } else {
             if(isMawb) {
                 awbLabelModel.setConsolidation(getConsolidation(id));
@@ -170,162 +160,262 @@ public class AWBLabelReport extends IReport{
         return awbLabelModel;
     }
 
+    private void processNonCustomLabel(AWbLabelModel awbLabelModel, ConsolidationDetails consolidationDetails, Long consoleId) throws RunnerException {
+        if(!isCustomLabel) {
+            awbLabelModel.setConsolidation(getConsolidationModel(consolidationDetails));
+            awbLabelModel.setAwb(getMawb(consoleId, true));
+            awbLabelModel.getConsolidation().setConsoleGrossWeightAndUnit(getConsolGrossWeightAndUnit(awbLabelModel.getConsolidation()));
+            awbLabelModel.setShipmentModels(new ArrayList<>());
+            if (!setIsNullOrEmpty(consolidationDetails.getShipmentsList())) {
+                for (ShipmentDetails shipmentDetails : consolidationDetails.getShipmentsList()) {
+                    awbLabelModel.getShipmentModels().add(getShipment(shipmentDetails));
+                }
+            }
+            isMawb = true;
+        }
+    }
+
     @Override
     Map<String, Object> populateDictionary(IDocumentModel documentModel) throws RunnerException {
         AWbLabelModel awbLabelModel = (AWbLabelModel) documentModel;
         Map<String, Object> dictionary = new HashMap<>();
         List<String> unlocations = new ArrayList<>();
 
-        if(awbLabelModel.shipment != null) {
-            if((awbLabelModel.getShipment().getTransportMode() != null && awbLabelModel.getShipment().getTransportMode().equals(AIR)) && (awbLabelModel.getShipment().getJobType() != null && awbLabelModel.getShipment().getJobType().equals("DRT")))
-                isMawb = true;
-            String mawb = awbLabelModel.shipment.getMasterBill();
-            V1TenantSettingsResponse v1TenantSettingsResponse = getCurrentTenantSettings();
-            populateMawb(dictionary, mawb);
-            if (awbLabelModel.shipment.getCarrierDetails() != null)
-                dictionary.put(ReportConstants.DESTINATION, awbLabelModel.shipment.getCarrierDetails().getDestinationPort());
-            if (awbLabelModel.shipment.getInnerPacks() != null) {
-                var inners = awbLabelModel.shipment.getInnerPacks().toString();
-                int size = inners.length();
-                if (size < 4) {
-                    for (int i = 0; i < 4 - size; i++) {
-                        inners = "0" + inners;
-                    }
-                }
-                dictionary.put(ReportConstants.INNERS, GetDPWWeightVolumeFormat(BigDecimal.valueOf(Long.parseLong(inners)), 0, v1TenantSettingsResponse));
-            }
-            if (awbLabelModel.shipment.getNoOfPacks() != null) {
-                var packs = awbLabelModel.shipment.getNoOfPacks().toString();
-                int size = packs.length();
-                if (size < 4) {
-                    for (int i = 0; i < 4 - size; i++) {
-                        packs = "0" + packs;
-                    }
-                }
-                dictionary.put(ReportConstants.PACKS, GetDPWWeightVolumeFormat(BigDecimal.valueOf(Long.parseLong(packs)), 0, v1TenantSettingsResponse));
-            }
-            dictionary.put(ReportConstants.HAWB_NUMBER, awbLabelModel.shipment.getHouseBill());
-            if (awbLabelModel.tenant != null) {
-                ReportHelper.addTenantDetails(dictionary, awbLabelModel.tenant);
-                awbLabelModel.setTenantAddress(ReportHelper.getListOfStrings(awbLabelModel.tenant.tenantName, awbLabelModel.tenant.address1,
-                        awbLabelModel.tenant.address2, awbLabelModel.tenant.city, awbLabelModel.tenant.state,
-                        awbLabelModel.tenant.zipPostCode, awbLabelModel.tenant.country, awbLabelModel.tenant.email,
-                        awbLabelModel.tenant.websiteUrl, awbLabelModel.tenant.phone));
-                if (awbLabelModel.getTenantAddress() != null)
-                    dictionary.put(ReportConstants.TENANT, awbLabelModel.getTenantAddress());
-            }
-
-            if (awbLabelModel.shipment.getCarrierDetails() != null && awbLabelModel.shipment.getCarrierDetails().getDestination() != null)
-                unlocations.add(awbLabelModel.shipment.getCarrierDetails().getDestination());
-            if (awbLabelModel.shipment.getCarrierDetails() != null && awbLabelModel.shipment.getCarrierDetails().getDestinationPort() != null)
-                unlocations.add(awbLabelModel.shipment.getCarrierDetails().getDestinationPort());
-            dictionary.put(GROSS_WEIGHT_AND_UNIT, IReport.ConvertToWeightNumberFormat(awbLabelModel.shipment.getWeight(), v1TenantSettingsResponse) + " " +   convertToSingleCharWeightFormat(awbLabelModel.shipment.getWeightUnit()));
+        if (awbLabelModel.shipment != null) {
+            processShipment(awbLabelModel, dictionary, unlocations);
         }
-        if(awbLabelModel.getConsolidation() != null){
-            String shippingLine = awbLabelModel.getConsolidation().getCarrierDetails() != null ? awbLabelModel.getConsolidation().getCarrierDetails().getShippingLine() : "";
-            if(!CommonUtils.IsStringNullOrEmpty(shippingLine)) {
-                dictionary.put(AIRLINE_NAME, shippingLine);
-            }
-            if(awbLabelModel.getConsolidation().getCarrierDetails() != null && awbLabelModel.getConsolidation().getCarrierDetails().getDestination() != null)
-                unlocations.add(awbLabelModel.getConsolidation().getCarrierDetails().getDestination());
 
-            if(awbLabelModel.getConsolidation().getCarrierDetails() != null && awbLabelModel.getConsolidation().getCarrierDetails().getDestinationPort() != null)
-                unlocations.add(awbLabelModel.getConsolidation().getCarrierDetails().getDestinationPort());
-
-            String totalGrossWeightAndUnit = awbLabelModel.getConsolidation().getConsoleGrossWeightAndUnit();
-            String[] parts = totalGrossWeightAndUnit.split(" ");
-            String totalGrossWeight = parts[0];
-            String unit = parts[1];
-            dictionary.put(GROSS_WEIGHT_AND_UNIT, totalGrossWeight  + " " +   convertToSingleCharWeightFormat(unit));
+        if (awbLabelModel.getConsolidation() != null) {
+            processConsolidation(awbLabelModel, dictionary, unlocations);
         }
 
         if (!unlocations.isEmpty()) {
-            List<UnlocationsResponse> unlocationsResponse = getUnlocationsResponses(unlocations);
-            if (unlocationsResponse != null && !unlocationsResponse.isEmpty()) {
-                for (var unloc : unlocationsResponse) {
-                    if (awbLabelModel.getShipment() != null && Objects.equals(unloc.getLocationsReferenceGUID(), awbLabelModel.shipment.getCarrierDetails().getDestination())) {
-                        dictionary.put(ReportConstants.HDEST, unloc.getName());
-                    }
-                    if (awbLabelModel.getShipment() != null && Objects.equals(unloc.getLocationsReferenceGUID(), awbLabelModel.shipment.getCarrierDetails().getDestinationPort())) {
-                        dictionary.put(ReportConstants.DESTINATION, unloc.getLocCode());
-                    }
-                    if (awbLabelModel.getConsolidation() != null && Objects.equals(unloc.getLocationsReferenceGUID(), awbLabelModel.getConsolidation().getCarrierDetails().getDestination())) {
-                        dictionary.put(ReportConstants.HDEST, unloc.getName());
-                    }
-                    if (awbLabelModel.getConsolidation() != null && Objects.equals(unloc.getLocationsReferenceGUID(), awbLabelModel.getConsolidation().getCarrierDetails().getDestinationPort())) {
-                        dictionary.put(ReportConstants.DESTINATION, unloc.getLocCode());
-                    }
-                }
+            processUnlocations(awbLabelModel, dictionary, unlocations);
+        }
+
+        processCommonDetails(awbLabelModel, dictionary);
+        processAirLegs(awbLabelModel, dictionary);
+        processPackingDetails(awbLabelModel, dictionary);
+        processCombiDetails(awbLabelModel, dictionary);
+
+        return dictionary;
+    }
+
+    private void processShipment(AWbLabelModel awbLabelModel, Map<String, Object> dictionary, List<String> unlocations) {
+        if (isMawbCondition(awbLabelModel)) {
+            isMawb=true;
+        }
+
+        String mawb = awbLabelModel.shipment.getMasterBill();
+        V1TenantSettingsResponse v1TenantSettingsResponse = getCurrentTenantSettings();
+        populateMawb(dictionary, mawb);
+
+        if (awbLabelModel.shipment.getCarrierDetails() != null) {
+            dictionary.put(ReportConstants.DESTINATION, awbLabelModel.shipment.getCarrierDetails().getDestinationPort());
+        }
+
+        processInnerPacks(awbLabelModel, dictionary, v1TenantSettingsResponse);
+        processNoOfPacks(awbLabelModel, dictionary, v1TenantSettingsResponse);
+
+        dictionary.put(ReportConstants.HAWB_NUMBER, awbLabelModel.shipment.getHouseBill());
+
+        if (awbLabelModel.tenant != null) {
+            processTenantDetails(awbLabelModel, dictionary);
+        }
+
+        if (awbLabelModel.shipment.getCarrierDetails() != null) {
+            addUnlocations(awbLabelModel.shipment.getCarrierDetails(), unlocations);
+        }
+
+        dictionary.put(GROSS_WEIGHT_AND_UNIT, IReport.ConvertToWeightNumberFormat(awbLabelModel.shipment.getWeight(), v1TenantSettingsResponse) + " " + convertToSingleCharWeightFormat(awbLabelModel.shipment.getWeightUnit()));
+    }
+
+    private boolean isMawbCondition(AWbLabelModel awbLabelModel) {
+        return awbLabelModel.getShipment().getTransportMode() != null && awbLabelModel.getShipment().getTransportMode().equals(AIR) &&
+                awbLabelModel.getShipment().getJobType() != null && awbLabelModel.getShipment().getJobType().equals("DRT");
+    }
+
+    private void processInnerPacks(AWbLabelModel awbLabelModel, Map<String, Object> dictionary, V1TenantSettingsResponse v1TenantSettingsResponse) {
+        if (awbLabelModel.shipment.getInnerPacks() != null) {
+            String inners = padWithZeros(awbLabelModel.shipment.getInnerPacks().toString());
+            dictionary.put(ReportConstants.INNERS, GetDPWWeightVolumeFormat(BigDecimal.valueOf(Long.parseLong(inners)), 0, v1TenantSettingsResponse));
+        }
+    }
+
+    private void processNoOfPacks(AWbLabelModel awbLabelModel, Map<String, Object> dictionary, V1TenantSettingsResponse v1TenantSettingsResponse) {
+        if (awbLabelModel.shipment.getNoOfPacks() != null) {
+            String packs = padWithZeros(awbLabelModel.shipment.getNoOfPacks().toString());
+            dictionary.put(ReportConstants.PACKS, GetDPWWeightVolumeFormat(BigDecimal.valueOf(Long.parseLong(packs)), 0, v1TenantSettingsResponse));
+        }
+    }
+
+    private String padWithZeros(String value) {
+        StringBuilder valueBuilder = new StringBuilder(value);
+        while (valueBuilder.length() < 4) {
+            valueBuilder.insert(0, "0");
+        }
+        value = valueBuilder.toString();
+        return value;
+    }
+
+    private void processTenantDetails(AWbLabelModel awbLabelModel, Map<String, Object> dictionary) {
+        ReportHelper.addTenantDetails(dictionary, awbLabelModel.tenant);
+        awbLabelModel.setTenantAddress(ReportHelper.getListOfStrings(awbLabelModel.tenant.tenantName, awbLabelModel.tenant.address1,
+                awbLabelModel.tenant.address2, awbLabelModel.tenant.city, awbLabelModel.tenant.state,
+                awbLabelModel.tenant.zipPostCode, awbLabelModel.tenant.country, awbLabelModel.tenant.email,
+                awbLabelModel.tenant.websiteUrl, awbLabelModel.tenant.phone));
+        if (awbLabelModel.getTenantAddress() != null) {
+            dictionary.put(ReportConstants.TENANT, awbLabelModel.getTenantAddress());
+        }
+    }
+
+    private void addUnlocations(CarrierDetailModel carrierDetails, List<String> unlocations) {
+        if (carrierDetails.getDestination() != null) {
+            unlocations.add(carrierDetails.getDestination());
+        }
+        if (carrierDetails.getDestinationPort() != null) {
+            unlocations.add(carrierDetails.getDestinationPort());
+        }
+    }
+
+    private void processConsolidation(AWbLabelModel awbLabelModel, Map<String, Object> dictionary, List<String> unlocations) {
+        String shippingLine = awbLabelModel.getConsolidation().getCarrierDetails() != null ? awbLabelModel.getConsolidation().getCarrierDetails().getShippingLine() : "";
+        if (!CommonUtils.IsStringNullOrEmpty(shippingLine)) {
+            dictionary.put(AIRLINE_NAME, shippingLine);
+        }
+
+        if (awbLabelModel.getConsolidation().getCarrierDetails() != null) {
+            addUnlocations(awbLabelModel.getConsolidation().getCarrierDetails(), unlocations);
+        }
+
+        String totalGrossWeightAndUnit = awbLabelModel.getConsolidation().getConsoleGrossWeightAndUnit();
+        String[] parts = totalGrossWeightAndUnit.split(" ");
+        String totalGrossWeight = parts[0];
+        String unit = parts[1];
+        dictionary.put(GROSS_WEIGHT_AND_UNIT, totalGrossWeight + " " + convertToSingleCharWeightFormat(unit));
+    }
+
+    private void processUnlocations(AWbLabelModel awbLabelModel, Map<String, Object> dictionary, List<String> unlocations) {
+        List<UnlocationsResponse> unlocationsResponse = getUnlocationsResponses(unlocations);
+        if (unlocationsResponse != null && !unlocationsResponse.isEmpty()) {
+            for (var unloc : unlocationsResponse) {
+                processUnloc(awbLabelModel, dictionary, unloc);
             }
         }
+    }
+
+    private void processUnloc(AWbLabelModel awbLabelModel, Map<String, Object> dictionary, UnlocationsResponse unloc) {
+        if (awbLabelModel.getShipment() != null){
+            if(Objects.equals(unloc.getLocationsReferenceGUID(), awbLabelModel.shipment.getCarrierDetails().getDestination()))
+                dictionary.put(ReportConstants.HDEST, unloc.getName());
+            if(Objects.equals(unloc.getLocationsReferenceGUID(), awbLabelModel.shipment.getCarrierDetails().getDestinationPort()))
+                dictionary.put(ReportConstants.DESTINATION, unloc.getLocCode());
+        }
+
+        if (awbLabelModel.getConsolidation() != null){
+            if(Objects.equals(unloc.getLocationsReferenceGUID(), awbLabelModel.getConsolidation().getCarrierDetails().getDestination()))
+                dictionary.put(ReportConstants.HDEST, unloc.getName());
+            if (Objects.equals(unloc.getLocationsReferenceGUID(), awbLabelModel.getConsolidation().getCarrierDetails().getDestinationPort())) {
+                dictionary.put(ReportConstants.DESTINATION, unloc.getLocCode());
+            }
+        }
+    }
+
+    private void processCommonDetails(AWbLabelModel awbLabelModel, Map<String, Object> dictionary) {
         dictionary.put(ReportConstants.AIR_LABEL_REMARKS, awbLabelModel.getRemarks());
         dictionary.put(ReportConstants.TENANT_NAME, awbLabelModel.getTenant() != null ? awbLabelModel.getTenant().getTenantName() : null);
-        if(awbLabelModel.shipment != null) {
+
+        if (awbLabelModel.shipment != null) {
             String shippingLine = awbLabelModel.getShipment().getCarrierDetails() != null ? awbLabelModel.getShipment().getCarrierDetails().getShippingLine() : "";
-            if(!CommonUtils.IsStringNullOrEmpty(shippingLine)) {
+            if (!CommonUtils.IsStringNullOrEmpty(shippingLine)) {
                 dictionary.put(CARRIER, shippingLine);
             }
-            var unit = awbLabelModel.getShipment().getPackingList() == null || awbLabelModel.getShipment().getPackingList().isEmpty() ? "" : awbLabelModel.getShipment().getPackingList().get(0).getChargeableUnit();
-            var value = addCommasWithPrecision(getChargeable(awbLabelModel.getShipment().getPackingList()) , 2, false);
+
+            var value = addCommasWithPrecision(getChargeable(awbLabelModel.getShipment().getPackingList()), 2, false);
             dictionary.put(ReportConstants.TOTAL_WEIGHT_AND_UNIT, value + " " + awbLabelModel.getShipment().getChargeableUnit());
-            //TODO
+
             try {
                 List<Packing> packingList = commonUtils.convertToList(awbLabelModel.getShipment().getPackingList(), Packing.class);
                 PackSummaryResponse response = packingService.calculatePackSummary(packingList, awbLabelModel.getShipment().getTransportMode(), awbLabelModel.getShipment().getShipmentType(), new ShipmentMeasurementDetailsDto());
-                if (response != null)
+                if (response != null) {
                     dictionary.put(CHARGEABLE_WEIGHT_UNIT, response.getPacksChargeableWeight());
-            }catch (Exception e){
+                }
+            } catch (Exception e) {
                 dictionary.put(CHARGEABLE_WEIGHT_UNIT, "0");
             }
+
             dictionary.put(PACKS_UNIT, Constants.MPK.equals(awbLabelModel.shipment.getPacksUnit()) ? Constants.PACKAGES : awbLabelModel.shipment.getPacksUnit());
         }
-        if(awbLabelModel.getAwb() != null && awbLabelModel.getAwb().getAwbCargoInfo() != null) {
+
+        if (awbLabelModel.getAwb() != null && awbLabelModel.getAwb().getAwbCargoInfo() != null) {
             dictionary.put(ReportConstants.OTHER_INFORMATION, awbLabelModel.getAwb().getAwbCargoInfo().getOtherInfo());
             dictionary.put(ReportConstants.HANDLING_INFO, awbLabelModel.getAwb().getAwbCargoInfo().getHandlingInfo());
         }
+    }
 
+    private void processAirLegs(AWbLabelModel awbLabelModel, Map<String, Object> dictionary) {
         List<UnlocationsResponse> airLegs;
         List<RoutingsModel> routingsModels = null;
-        if(awbLabelModel.getConsolidation() != null){
+
+        if (awbLabelModel.getConsolidation() != null) {
             routingsModels = awbLabelModel.getConsolidation().getRoutingsList() == null ? Collections.emptyList() : awbLabelModel.getConsolidation().getRoutingsList().stream().filter(c -> c.getMode().equals(AIR)).filter(c -> !c.getPod().equalsIgnoreCase(awbLabelModel.getConsolidation().getCarrierDetails().getDestinationPort())).toList();
-        }else if(awbLabelModel.getShipment() != null){
+        } else if (awbLabelModel.getShipment() != null) {
             routingsModels = awbLabelModel.shipment.getRoutingsList() == null ? Collections.emptyList() : awbLabelModel.shipment.getRoutingsList().stream().filter(c -> c.getMode().equals(AIR)).filter(c -> !c.getPod().equalsIgnoreCase(awbLabelModel.getShipment().getCarrierDetails().getDestinationPort())).toList();
         }
 
-        if(!CollectionUtils.isEmpty(routingsModels)) {
+        if (!CollectionUtils.isEmpty(routingsModels)) {
             airLegs = getUnlocationsResponses(routingsModels.stream().map(RoutingsModel::getPod).distinct().toList());
             Map<String, UnlocationsResponse> locationMap = new HashMap<>();
-            if(!airLegs.isEmpty()) {
-                for(UnlocationsResponse unlocationsResponse : airLegs) {
+            if (!airLegs.isEmpty()) {
+                for (UnlocationsResponse unlocationsResponse : airLegs) {
                     locationMap.put(unlocationsResponse.getLocationsReferenceGUID(), unlocationsResponse);
                 }
             }
-            List<String> iataCodeList = new ArrayList<>();
-            for (RoutingsModel routingsModel : routingsModels) {
-                if(locationMap.containsKey(routingsModel.getPod()) && !iataCodeList.contains(locationMap.get(routingsModel.getPod()).getIataCode())) {
-                    iataCodeList.add(locationMap.get(routingsModel.getPod()).getIataCode());
-                }
-            }
-            if(awbLabelModel.getConsolidation() != null) {
-                if (!iataCodeList.isEmpty())
-                    dictionary.put(ReportConstants.CONSOL_FIRST_LEG_DESTINATION, iataCodeList.get(0));
-                if (iataCodeList.size() >= 2)
-                    dictionary.put(ReportConstants.CONSOL_SECOND_LEG_DESTIATION, iataCodeList.get(1));
-                if (iataCodeList.size() >= 3)
-                    dictionary.put(ReportConstants.CONSOL_THIRD_LEG_DESTINATION, iataCodeList.get(2));
-            } else {
-                if (!iataCodeList.isEmpty())
-                    dictionary.put(ReportConstants.FIRST_LEG_DESTINATION, iataCodeList.get(0));
-                if (iataCodeList.size() >= 2)
-                    dictionary.put(ReportConstants.SECOND_LEG_DESTINATION, iataCodeList.get(1));
-                if (iataCodeList.size() >= 3)
-                    dictionary.put(ReportConstants.THIRD_LEG_DESTINATION, iataCodeList.get(2));
+
+            List<String> iataCodeList = getIataCodeList(routingsModels, locationMap);
+
+            addLegsInDictionary(awbLabelModel, dictionary, iataCodeList);
+        }
+    }
+
+    private List<String> getIataCodeList(List<RoutingsModel> routingsModels, Map<String, UnlocationsResponse> locationMap) {
+        List<String> iataCodeList = new ArrayList<>();
+        for (RoutingsModel routingsModel : routingsModels) {
+            if (locationMap.containsKey(routingsModel.getPod()) && !iataCodeList.contains(locationMap.get(routingsModel.getPod()).getIataCode())) {
+                iataCodeList.add(locationMap.get(routingsModel.getPod()).getIataCode());
             }
         }
+        return iataCodeList;
+    }
 
-        if(awbLabelModel.getShipment() != null) {
+    private void addLegsInDictionary(AWbLabelModel awbLabelModel, Map<String, Object> dictionary, List<String> iataCodeList) {
+        if (awbLabelModel.getConsolidation() != null) {
+            if (!iataCodeList.isEmpty()) {
+                dictionary.put(ReportConstants.CONSOL_FIRST_LEG_DESTINATION, iataCodeList.get(0));
+            }
+            if (iataCodeList.size() >= 2) {
+                dictionary.put(ReportConstants.CONSOL_SECOND_LEG_DESTIATION, iataCodeList.get(1));
+            }
+            if (iataCodeList.size() >= 3) {
+                dictionary.put(ReportConstants.CONSOL_THIRD_LEG_DESTINATION, iataCodeList.get(2));
+            }
+        } else {
+            if (!iataCodeList.isEmpty()) {
+                dictionary.put(ReportConstants.FIRST_LEG_DESTINATION, iataCodeList.get(0));
+            }
+            if (iataCodeList.size() >= 2) {
+                dictionary.put(ReportConstants.SECOND_LEG_DESTINATION, iataCodeList.get(1));
+            }
+            if (iataCodeList.size() >= 3) {
+                dictionary.put(ReportConstants.THIRD_LEG_DESTINATION, iataCodeList.get(2));
+            }
+        }
+    }
+
+    private void processPackingDetails(AWbLabelModel awbLabelModel, Map<String, Object> dictionary) {
+        if (awbLabelModel.getShipment() != null) {
             StringBuilder sb = new StringBuilder();
-            if(awbLabelModel.getShipment().getPackingList() != null) {
+            if (awbLabelModel.getShipment().getPackingList() != null) {
                 awbLabelModel.getShipment().getPackingList().forEach(packingModel -> {
                     var packs = Integer.parseInt(packingModel.getPacks() == null || packingModel.getPacks().isEmpty() ? "0" : packingModel.getPacks());
                     sb.append(packs).append(" ").append(packingModel.getPacksType()).append('\n');
@@ -333,120 +423,142 @@ public class AWBLabelReport extends IReport{
             }
             dictionary.put(HAWB_NOS_PACKS, sb.toString());
 
-            List<String> unlocoRequests = this.createUnLocoRequestFromShipmentModel(awbLabelModel.getShipment());
-            Map<String, UnlocationsResponse> unlocationsMap = masterDataUtils.getLocationData(new HashSet<>(unlocoRequests));
-
-            UnlocationsResponse pol = awbLabelModel.getShipment().getCarrierDetails() != null ? unlocationsMap.get(awbLabelModel.getShipment().getCarrierDetails().getOriginPort()) : null;
-            UnlocationsResponse pod = awbLabelModel.getShipment().getCarrierDetails() != null ? unlocationsMap.get(awbLabelModel.getShipment().getCarrierDetails().getDestinationPort()) : null;
-            if (pod != null) {
-                if(pod.getIataCode() != null)
-                    dictionary.put(ReportConstants.POD_AIRPORT_CODE_IN_CAPS, pod.getIataCode().toUpperCase());
-                if(pod.getAirPortName() != null)
-                    dictionary.put(ReportConstants.DESTINATION_PORT, pod.getAirPortName().toUpperCase());
-            }
-            if (pol != null) {
-                if(pol.getIataCode() != null)
-                    dictionary.put(ReportConstants.POL_AIRPORT_CODE_IN_CAPS, pol.getIataCode().toUpperCase());
-                if(pol.getAirPortName() != null)
-                    dictionary.put(ReportConstants.ORIGIN_PORT, pol.getAirPortName().toUpperCase());
-            }
+            processShipmentPolPod(awbLabelModel, dictionary);
         }
 
-        if(awbLabelModel.getConsolidation() != null){
-            var mawb = awbLabelModel.getConsolidation().getMawb();
-            populateMawb(dictionary, mawb);
-            StringBuilder sb = new StringBuilder();
-            if(awbLabelModel.getConsolidation().getShipmentsList() != null) {
-                awbLabelModel.getConsolidation().getShipmentsList().forEach(shipment -> {
-                    int packs = 0;
-                    if(shipment.getPackingList() != null)
-                        packs = shipment.getPackingList().stream().mapToInt(c -> Integer.parseInt((c.getPacks() == null || c.getPacks().isEmpty()) ? "0" : c.getPacks())).sum();
-                    sb.append(shipment.getHouseBill()).append(" ").append(packs).append('\n');
-                });
-            }
-            dictionary.put(HAWB_NOS_PACKS, sb.toString());
-            List<String> unlocoRequests = createUnLocoRequestFromConsolidation(awbLabelModel.getConsolidation());
-            Map<String, UnlocationsResponse> unlocationsMap = masterDataUtils.getLocationData(new HashSet<>(unlocoRequests));
+        processConsolidationPackingDetails(awbLabelModel, dictionary);
 
-            UnlocationsResponse pol = awbLabelModel.getConsolidation().getCarrierDetails() != null ? unlocationsMap.get(awbLabelModel.getConsolidation().getCarrierDetails().getOriginPort()) : null;
-            UnlocationsResponse pod = awbLabelModel.getConsolidation().getCarrierDetails() != null ? unlocationsMap.get(awbLabelModel.getConsolidation().getCarrierDetails().getDestinationPort()) : null;
-
-            if (pod != null && pod.getIataCode() != null) {
-                dictionary.put(ReportConstants.CONSOL_DESTINATION_AIRPORT_CODE, pod.getIataCode());
-                dictionary.put(CONSOL_DESTINATION_AIRPORT_CODE_CAPS, pod.getIataCode().toUpperCase());
-            }
-            if (pod != null && pod.getAirPortName() != null) {
-                dictionary.put(ReportConstants.DESTINATION_PORT_NAME_INCAPS_AIR, pod.getAirPortName().toUpperCase());
-            }
-            if (pol != null && pol.getIataCode() != null) {
-                dictionary.put(ReportConstants.CONSOL_ORIGIN_AIRPORT_CODE, pol.getIataCode());
-                dictionary.put(CONSOL_ORIGIN_AIRPORT_CODE_CAPS, pol.getIataCode().toUpperCase());
-            }
-            if (pol != null && pol.getAirPortName() != null) {
-                dictionary.put(ReportConstants.ORIGIN_PORT_NAME_INCAPS_AIR, pol.getAirPortName().toUpperCase());
-            }
-        }
-
-        if(awbLabelModel.getAwb() != null) {
-            if(awbLabelModel.getConsolidation() == null)
+        if (awbLabelModel.getAwb() != null) {
+            if (awbLabelModel.getConsolidation() == null) {
+                assert awbLabelModel.getShipment() != null;
                 dictionary.put(ReportConstants.HAWB_CAPS, awbLabelModel.getShipment().getMasterBill());
-            else {
+            } else {
                 dictionary.put(HAWB_CAPS, awbLabelModel.getConsolidation().getShipmentsList().stream().map(ShipmentModel::getHouseBill).collect(Collectors.joining(", ")));
                 dictionary.put(ReportConstants.MAWB_CAPS, awbLabelModel.getConsolidation().getMawb());
             }
         }
 
-        if(awbLabelModel.getConsolidation() != null && awbLabelModel.getConsolidation().getPackingList() != null) {
-            try {
-                List<Packing> packingList = commonUtils.convertToList(awbLabelModel.getConsolidation().getPackingList(), Packing.class);
-                PackSummaryResponse response = packingService.calculatePackSummary(packingList, awbLabelModel.getConsolidation().getTransportMode(), awbLabelModel.getConsolidation().getContainerCategory(), new ShipmentMeasurementDetailsDto());
-                if(response != null)
-                    dictionary.put(ReportConstants.CONSOL_CHARGEABLE_WEIGHT_AND_UNIT, response.getPacksChargeableWeight());
-            }catch (Exception e){
-                dictionary.put(CONSOL_CHARGEABLE_WEIGHT_AND_UNIT, "0");
-            }
-        }
+        processConsolePackingList(awbLabelModel, dictionary);
 
-        if (awbLabelModel.getConsolidation() != null && awbLabelModel.getConsolidation().getPackingList() != null) {
-            var totalPacks = 0;
-            int size = awbLabelModel.getConsolidation().getPackingList().size();
-            for(int i = 0; i < size; i++) {
-                if(awbLabelModel.getConsolidation().getPackingList().get(i).getPacks() != null)
-                    totalPacks += Integer.parseInt(awbLabelModel.getConsolidation().getPackingList().get(i).getPacks());
-            }
-            dictionary.put(ReportConstants.TOTAL_CONSOL_PACKS, totalPacks);
-            var packingModelList = awbLabelModel.getConsolidation().getPackingList().stream().filter(c -> c.getWeight() != null && c.getWeightUnit() != null).toList();
-            var value = addCommasWithPrecision(BigDecimal.valueOf(packingModelList.stream().mapToDouble(c -> c.getWeight().doubleValue()).sum()) , 2, false);
-            dictionary.put(CONSOL_TOTAL_WEIGHT_AND_UNIT,  value + " " + (!packingModelList.isEmpty() ? packingModelList.get(0).getWeightUnit() : null));
-        }
         if (awbLabelModel.shipment != null && awbLabelModel.shipment.getPackingList() != null) {
             dictionary.put(ReportConstants.TOTAL_PACKS, awbLabelModel.shipment.getNoOfPacks());
         }
-        if(isCombi) {
+    }
+
+    private void processConsolidationPackingDetails(AWbLabelModel awbLabelModel, Map<String, Object> dictionary) {
+        if (awbLabelModel.getConsolidation() != null) {
+            var mawb = awbLabelModel.getConsolidation().getMawb();
+            populateMawb(dictionary, mawb);
+
+            StringBuilder sb = new StringBuilder();
+            if (awbLabelModel.getConsolidation().getShipmentsList() != null) {
+                awbLabelModel.getConsolidation().getShipmentsList().forEach(shipment -> {
+                    int packs = 0;
+                    if (shipment.getPackingList() != null) {
+                        packs = shipment.getPackingList().stream().mapToInt(c -> Integer.parseInt((c.getPacks() == null || c.getPacks().isEmpty()) ? "0" : c.getPacks())).sum();
+                    }
+                    sb.append(shipment.getHouseBill()).append(" ").append(packs).append('\n');
+                });
+            }
+            dictionary.put(HAWB_NOS_PACKS, sb.toString());
+
+            processConsolidationPolPod(awbLabelModel, dictionary);
+        }
+    }
+
+    private void processConsolePackingList(AWbLabelModel awbLabelModel, Map<String, Object> dictionary) {
+        if (!(awbLabelModel.getConsolidation() != null && awbLabelModel.getConsolidation().getPackingList() != null)) {
+            return;
+        }
+        try {
+            List<Packing> packingList = commonUtils.convertToList(awbLabelModel.getConsolidation().getPackingList(), Packing.class);
+            PackSummaryResponse response = packingService.calculatePackSummary(packingList, awbLabelModel.getConsolidation().getTransportMode(), awbLabelModel.getConsolidation().getContainerCategory(), new ShipmentMeasurementDetailsDto());
+            if (response != null) {
+                dictionary.put(ReportConstants.CONSOL_CHARGEABLE_WEIGHT_AND_UNIT, response.getPacksChargeableWeight());
+            }
+        } catch (Exception e) {
+            dictionary.put(CONSOL_CHARGEABLE_WEIGHT_AND_UNIT, "0");
+        }
+
+        var totalPacks = 0;
+        int size = awbLabelModel.getConsolidation().getPackingList().size();
+        for (int i = 0; i < size; i++) {
+            if (awbLabelModel.getConsolidation().getPackingList().get(i).getPacks() != null) {
+                totalPacks += Integer.parseInt(awbLabelModel.getConsolidation().getPackingList().get(i).getPacks());
+            }
+        }
+        dictionary.put(ReportConstants.TOTAL_CONSOL_PACKS, totalPacks);
+
+        var packingModelList = awbLabelModel.getConsolidation().getPackingList().stream().filter(c -> c.getWeight() != null && c.getWeightUnit() != null).toList();
+        var value = addCommasWithPrecision(BigDecimal.valueOf(packingModelList.stream().mapToDouble(c -> c.getWeight().doubleValue()).sum()), 2, false);
+        dictionary.put(CONSOL_TOTAL_WEIGHT_AND_UNIT, value + " " + (!packingModelList.isEmpty() ? packingModelList.get(0).getWeightUnit() : null));
+    }
+
+    private void processConsolidationPolPod(AWbLabelModel awbLabelModel, Map<String, Object> dictionary) {
+        List<String> unlocoRequests = createUnLocoRequestFromConsolidation(awbLabelModel.getConsolidation());
+        Map<String, UnlocationsResponse> unlocationsMap = masterDataUtils.getLocationData(new HashSet<>(unlocoRequests));
+
+        UnlocationsResponse pol = awbLabelModel.getConsolidation().getCarrierDetails() != null ? unlocationsMap.get(awbLabelModel.getConsolidation().getCarrierDetails().getOriginPort()) : null;
+        UnlocationsResponse pod = awbLabelModel.getConsolidation().getCarrierDetails() != null ? unlocationsMap.get(awbLabelModel.getConsolidation().getCarrierDetails().getDestinationPort()) : null;
+
+        if (pod != null && pod.getIataCode() != null) {
+            dictionary.put(ReportConstants.CONSOL_DESTINATION_AIRPORT_CODE, pod.getIataCode());
+            dictionary.put(CONSOL_DESTINATION_AIRPORT_CODE_CAPS, pod.getIataCode().toUpperCase());
+        }
+        if (pod != null && pod.getAirPortName() != null) {
+            dictionary.put(ReportConstants.DESTINATION_PORT_NAME_INCAPS_AIR, pod.getAirPortName().toUpperCase());
+        }
+        if (pol != null && pol.getIataCode() != null) {
+            dictionary.put(ReportConstants.CONSOL_ORIGIN_AIRPORT_CODE, pol.getIataCode());
+            dictionary.put(CONSOL_ORIGIN_AIRPORT_CODE_CAPS, pol.getIataCode().toUpperCase());
+        }
+        if (pol != null && pol.getAirPortName() != null) {
+            dictionary.put(ReportConstants.ORIGIN_PORT_NAME_INCAPS_AIR, pol.getAirPortName().toUpperCase());
+        }
+    }
+
+    private void processShipmentPolPod(AWbLabelModel awbLabelModel, Map<String, Object> dictionary) {
+        List<String> unlocoRequests = this.createUnLocoRequestFromShipmentModel(awbLabelModel.getShipment());
+        Map<String, UnlocationsResponse> unlocationsMap = masterDataUtils.getLocationData(new HashSet<>(unlocoRequests));
+
+        UnlocationsResponse pol = awbLabelModel.getShipment().getCarrierDetails() != null ? unlocationsMap.get(awbLabelModel.getShipment().getCarrierDetails().getOriginPort()) : null;
+        UnlocationsResponse pod = awbLabelModel.getShipment().getCarrierDetails() != null ? unlocationsMap.get(awbLabelModel.getShipment().getCarrierDetails().getDestinationPort()) : null;
+
+        if (pod != null) {
+            if (pod.getIataCode() != null) {
+                dictionary.put(ReportConstants.POD_AIRPORT_CODE_IN_CAPS, pod.getIataCode().toUpperCase());
+            }
+            if (pod.getAirPortName() != null) {
+                dictionary.put(ReportConstants.DESTINATION_PORT, pod.getAirPortName().toUpperCase());
+            }
+        }
+
+        if (pol != null) {
+            if (pol.getIataCode() != null) {
+                dictionary.put(ReportConstants.POL_AIRPORT_CODE_IN_CAPS, pol.getIataCode().toUpperCase());
+            }
+            if (pol.getAirPortName() != null) {
+                dictionary.put(ReportConstants.ORIGIN_PORT, pol.getAirPortName().toUpperCase());
+            }
+        }
+    }
+
+
+    private void processCombiDetails(AWbLabelModel awbLabelModel, Map<String, Object> dictionary) {
+        if (isCombi) {
             dictionary.put(IS_COMBI, true);
             dictionary.put(ReportConstants.IS_MAWB, false);
             dictionary.put(ReportConstants.IS_HAWB, false);
-            List<org.apache.commons.lang3.tuple.Pair<String, Integer>> hawbPacksList = new ArrayList<>();
-            if(!listIsNullOrEmpty(awbLabelModel.getShipmentModels())) {
-                for(ShipmentModel shipmentModel: awbLabelModel.getShipmentModels()) {
-                    int noOfPacks = 0;
-                    if(!listIsNullOrEmpty(shipmentModel.getPackingList())) {
-                        for(PackingModel packingModel: shipmentModel.getPackingList()) {
-                            noOfPacks = noOfPacks + Integer.parseInt(packingModel.getPacks());
-                        }
-                    }
-                    if(noOfPacks > 0)
-                        hawbPacksList.add(Pair.of(shipmentModel.getHouseBill(), noOfPacks));
-                }
-            }
-            dictionary.put(ReportConstants.HAWB_PACKS_MAP, hawbPacksList);
+
+            processHawbPackDetails(awbLabelModel, dictionary);
         } else {
             dictionary.put(IS_COMBI, false);
             dictionary.put(ReportConstants.IS_MAWB, this.isMawb);
             dictionary.put(ReportConstants.IS_HAWB, !this.isMawb);
         }
-        if(awbLabelModel.getShipment() != null && isMawb){
-            //DRT SHIPMENT
+
+        if (awbLabelModel.getShipment() != null && isMawb) {
+            // DRT SHIPMENT
             dictionary.put(AIRLINE_NAME, dictionary.get(CARRIER));
             dictionary.put(CONSOL_DESTINATION_AIRPORT_CODE, dictionary.get(POD_AIRPORT_CODE_IN_CAPS));
             dictionary.put(DESTINATION_PORT_NAME_INCAPS_AIR, dictionary.get(DESTINATION_PORT));
@@ -460,7 +572,24 @@ public class AWBLabelReport extends IReport{
             dictionary.put(MAWB_CAPS, awbLabelModel.getShipment().getMasterBill());
             dictionary.remove(HAWB_CAPS);
         }
-        return dictionary;
+    }
+
+    private void processHawbPackDetails(AWbLabelModel awbLabelModel, Map<String, Object> dictionary) {
+        List<Pair<String, Integer>> hawbPacksList = new ArrayList<>();
+        if (!listIsNullOrEmpty(awbLabelModel.getShipmentModels())) {
+            for (ShipmentModel shipmentModel : awbLabelModel.getShipmentModels()) {
+                int noOfPacks = 0;
+                if (!listIsNullOrEmpty(shipmentModel.getPackingList())) {
+                    for (PackingModel packingModel : shipmentModel.getPackingList()) {
+                        noOfPacks = noOfPacks + Integer.parseInt(packingModel.getPacks());
+                    }
+                }
+                if (noOfPacks > 0) {
+                    hawbPacksList.add(Pair.of(shipmentModel.getHouseBill(), noOfPacks));
+                }
+            }
+        }
+        dictionary.put(ReportConstants.HAWB_PACKS_MAP, hawbPacksList);
     }
 
     public String getConsolGrossWeightAndUnit(ConsolidationModel consolidationModel) throws RunnerException {
@@ -496,9 +625,9 @@ public class AWBLabelReport extends IReport{
     private List<UnlocationsResponse> getUnlocationsResponses(List<String> unlocations) {
         if(unlocations.isEmpty()) return Collections.emptyList();
         List<Object> criteria = Arrays.asList(
-                Arrays.asList(EntityTransferConstants.LOCATION_SERVICE_GUID),
+                List.of(EntityTransferConstants.LOCATION_SERVICE_GUID),
                 "In",
-                Arrays.asList(unlocations)
+                List.of(unlocations)
         );
         CommonV1ListRequest commonV1ListRequest = CommonV1ListRequest.builder().skip(0).criteriaRequests(criteria).build();
         V1DataResponse v1DataResponse = v1Service.fetchUnlocation(commonV1ListRequest);
